--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node main.ts",
-    "dev": "nodemon main.ts",
+    "main": "nodemon main.ts",
+    "worker": "nodemon main.ts worker",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
